<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">aGrep Advanced</string>
    <string name="app_settings">Settings</string>
	<string name="app_search_result">Searching results</string>
	
	<string name="app_text_view">View file</string>
	<string name="app_edit_view">Edit file</string>
	<string name="app_about">About</string>

	<string name="search_hint">Search</string>
	<string name="msg_search_no">Your search <b>%1$s</b> did not match any documents.</string>
	<string name="msg_search_canceled">Canceled by the user.</string>
	<string name="title_replace_options">Text replacement</string>

	<string name="label_dir">Target Directories</string>
    <string name="label_ext">Target Extensions</string>

	<string name="msg_progress">Found %1$s (in %2$d files)</string>
	<string name="msg_progress_replace">Replaced in %1$s files</string>
	<string name="msg_is_empty">Enter the keyword(s)</string>
	
	<!--OLD STRING-->
	<!--LABELS-->
	<string name="label_search">Search:</string>
	<string name="label_hint">Search word</string>
	<string name="label_re">Regular Expression</string>
    <string name="label_ic">Ignore Case</string>
	<string name="label_mw">Match word</string>
	<string name="label_hidden">Hidden files</string>
	<string name="label_files">Search files</string>
	<string name="label_only_files">Only files</string>
	

	<string name="title_actionbar">%s selected</string>
	<string name="title_label_adddir">Add Directory</string>
	<string name="title_label_addext">Add Extension (* all)</string>
	<string name="title_grep_spinner">Now searching…</string>
	
	<string name="title_category_global">Global</string>
	<string name="title_font_size">Font size</string>
	
	<string name="title_category_about">About</string>
	<string name="title_application_version">Version</string>
	<string name="title_select_action">Select an action</string>
	
	<string name="title_search">Search</string>
	<string name="title_highlight_fg">Highlight Text Color</string>
	<string name="title_highlight_bg">Highlight BG Color</string>
	
	<string name="title_search_hidden">Search in hidden files</string>
	<string name="title_search_hidden_on">Search for text in hidden files and folders</string>
	<string name="title_search_hidden_off">Exclude from Search hidden files and folders</string>
	
	<string name="title_create_backup">Create backup</string>
	<string name="title_create_backup_on">Create backup file type "~"</string>
	<string name="title_create_backup_off">Do not create a backup copy</string>
	
	<string name="title_remove_item">Remove item</string>
    <string name="msg_remove_item">%s\nAre you sure?</string>


	<!--ЗАМЕНА-->

	<string name="title_replace_spinner">Now replacing…</string>
	<string name="title_replace">Replace</string>
	<string name="action_replace">Replece</string>
	<string name="action_replace_selected">Replece selected</string>
	<string name="action_replace_all">Replece all</string>

	<string name="msg_replace_confirm">Replace <b>%1$s</b>\n<b>%2$s</b> with <b>%3$s</b> in the file?</string>
	<string name="msg_replace_selected_confirm">Replace the selected files <b>%1$s</b> with <b>%1$s</b>?</string>
	<string name="msg_replace_all_confirm">Replace all <b>%1$s</b> files found in <b>%2$s</b>?</string>
	<string name="msg_replace">Replace <b>%1$s</b> on:</string>
	<string name="msg_replace_ok">The replacement of <b>%1$s</b> with <b>%2$s</b> is complete.</string>
	<string name="msg_replace_canceled">The replacement of <b>%1$s</b> with <b>%2$s</b> is canceled.</string>
	
	<string name="msg_no_replace_query">You did not specify a word or phrase to replace.</string>

	<string name="title_save_file">Save file</string>
	<string name="msg_save_file">The file %1$s is changed, save the changes?</string>
	<string name="msg_saved_file">The file %1$s is saved</string>
	
	<!--ACTIONS-->
	<string name="action_ok">Ok</string>
	<string name="action_cancel">Cancel</string>
	<string name="action_yes">Yes</string>
	<string name="action_no">No</string>
	
	<string name="action_no_ext">No Extension</string>
	<string name="action_add_ext">Add Extension</string>
	<string name="action_add_dir">Add Directory</string>
	
	<string name="action_open">Open</string>
	<string name="action_search">Search</string>
	<string name="action_search_close">Close</string>
	<string name="action_rescan">Rescan</string>
	<string name="action_copy">Copy</string>
	
	<string name="action_select">Select</string>
	<string name="action_select_all">Select all</string>
	<string name="action_unselect_all">Unselect all</string>
	<string name="action_select_invert">Invert selection</string>
	
	<string name="action_expand_all">Expand all</string>
	<string name="action_collapse_all">Collapse all</string>
	
	
	<string name="action_view_tools">Tools</string>
	<string name="action_view_save">Save</string>
	<string name="action_send">Send</string>
	<string name="action_mode_view">View</string>
	<string name="action_mode_edit">Edit</string>
	<string name="action_font_up">Font +</string>
	<string name="action_font_down">Font -</string>
	<string name="action_font_default">Default size</string>
	<string name="action_default">Default</string>
	<string name="action_preference">Preferences</string>
	<string name="action_help">Help</string>
	<string name="action_quit">Quit</string>
	
	<!--MESSEGE-->
	<string name="msg_no_target_dir">There is no target directory.\nPlease set target directory.</string>
	<string name="msg_no_target_ext">No file extensions are specified. \nPlease specify extensions.</string>
	<string name="msg_no_search_query">Missing keywords.</string>
	
	<string name="msg_grep_finished">Finished.</string>
    <string name="msg_grep_canceled">Canceled.</string>
	<string name="msg_copied">Copied to clipboard</string>
	<string name="msg_back_pressed">Press once again to exit!</string>
	
	<!--Colorpicker-->
	<string name="color_picker_input">Input Color code</string>
	<string name="color_picker_hint">Enter 6-digit hexadecimal</string>

	<string name="about_text">
		Search and replace in text files. \n
		Site: https://github.com/tohateam/aGrep-Advanced\n\n
		The program is distributed <b>\"as is\"</b>. \n
		The author is not responsible for lost or corrupted files.\n
		The program was created for personal use, and since I am not a programmer, \n
		the program code is written on the principle that <b>\"I know and I can do it\"</b>.\n
		I will be glad to any help in improving the program. \n
		Thank you.
	</string>
	<string name="about_library_title">Used libraries and projects</string>
	<string name="about_library">
		When creating the program, \n
		freely distributed projects and libraries were used:\n
		aGrep:\n
		https://github.com/jiro-aqua/aGrep\n\n
		ExFilePicker:\n
		https://github.com/bartwell/ExFilePicker
	</string>
	
	<string name="about_license_title">License</string>
	<string name="about_google_license">
		Copyright (C) 2005-2015 The Android Open Source Project
		\n\nLicensed under the Apache License, Version 2.0 (the "License");
		\nyou may not use this file except in compliance with the License.
		\nYou may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0
		\n\nUnless required by applicable law or agreed to in writing, 
		\nsoftware distributed under the License is distributed on an "AS IS" BASIS, 
		\nWITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
		\nSee the License for the specific language governing permissions
		\nand limitations under the License.
	</string>
	
</resources>
