<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:seekbar="http://schemas.android.com/apk/res/ua.tohateam.aGrep"
>

	<PreferenceCategory
		android:title="@string/title_category_global"
		android:layout="@layout/pref_category">

		<!--Создать резервную копию файла-->
		<CheckBoxPreference
			android:defaultValue="true"
			android:key="create_backup"
			android:title="@string/title_create_backup"
			android:summaryOn="@string/title_create_backup_on"
			android:summaryOff="@string/title_create_backup_off"
		/>

		<!--Добавить номер строки-->
		<CheckBoxPreference
			android:defaultValue="false"
			android:key="AddLineNumber"
			android:title="@string/title_add_linenumber"
			android:summary="@string/add_linenumber_summary"
		/>

	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/title_search"
		android:layout="@layout/pref_category">

		<!--Поиск в скрытых-->
		<CheckBoxPreference
			android:defaultValue="false"
			android:key="search_in_hidden"
			android:title="@string/title_search_hidden"
			android:summaryOn="@string/title_search_hidden_on"
			android:summaryOff="@string/title_search_hidden_off"
		/>

		<!--Цвет текста-->
		<com.rarepebble.colorpicker.ColorPreference
			android:key="HighlightFg"
			android:title="@string/title_highlight_fg"
			app:colorpicker_showAlpha="true"
			app:colorpicker_showHex="true"
			android:defaultValue="#FF000000"
			app:colorpicker_selectNoneButtonText="@string/action_default"
        />
	
		<!--Цвет фона-->
		<com.rarepebble.colorpicker.ColorPreference
			android:key="HighlightBg"
			android:title="@string/title_highlight_bg"
			app:colorpicker_showAlpha="true"
			app:colorpicker_showHex="true"
			android:defaultValue="#FF00FFFF"
			app:colorpicker_selectNoneButtonText="@string/action_default"
        />

		<!--Кол-во отмен-->
		<ua.tohateam.aGrep.views.SeekBarPreference
			android:key="undoSize"
			android:title="@string/title_undo_number"
			android:dialogTitle="@string/title_undo_number"
			android:summary="@string/title_undo_number_summary"
			android:persistent="true"
			android:defaultValue="50"
			seekbar:minValue="10"
			seekbar:maxValue="100"
		/>

	</PreferenceCategory>

	
	<PreferenceCategory
		android:title="@string/title_category_about"
		android:layout="@layout/pref_category">
		
		<!--Версия программы-->
		<Preference
			android:key="application_version"
			android:title="@string/title_application_version" />
	</PreferenceCategory>

</PreferenceScreen>
