<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<item
		android:id="@+id/item_view_mode"
		android:icon="@drawable/ic_eye"
		android:title="@string/action_mode_view"
		app:showAsAction="always"/>
	
	<item
		android:id="@+id/item_view_save"
		android:icon="@drawable/ic_content_save"
		android:title="@string/action_view_save"
		android:visible="false"
		app:showAsAction="always"/>
	
	<item
		android:id="@+id/item_view_replace"
		android:icon="@drawable/ic_rename_box"
		android:title="@string/action_replace"
		app:showAsAction="ifRoom"/>

	<item
        android:id="@+id/item_view_copy"
		android:icon="@drawable/ic_content_copy"
        android:title="@string/action_copy"
		app:showAsAction="ifRoom"/>

	<item
		android:id="@+id/item_view_send"
		android:icon="@drawable/ic_share_variant"
		android:title="@string/action_send"
		app:showAsAction="ifRoom"/>
	
	<item
		android:id="@+id/item_view_font_size"
		android:icon="@drawable/ic_format_size"
		android:title="@string/title_font_size"
		app:showAsAction="never"/>
	
</menu>
