<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/item_add_dir"
		android:icon="@drawable/ic_unfold_more"
		android:title="@string/action_expand_all"
		app:showAsAction="always"/>
	<item
		android:id="@+id/item_add_ext"
		android:icon="@drawable/ic_unfold_more"
		android:title="@string/action_expand_all"
		app:showAsAction="always"/>
	
	<item
		android:id="@+id/action_preference"
		android:title="@string/action_preference"
		android:enabled="true">
	</item>
	
	<item
		android:id="@+id/help_menu"
		android:title="@string/action_help"
		android:enabled="true">
	</item>
	
	<item
		android:id="@+id/action_about"
		android:title="@string/app_about"
		android:enabled="true">
	</item>
	
	<item
		android:id="@+id/quit_menu"
		android:title="@string/action_quit"
		android:enabled="true">
	</item>	
</menu>
