<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="5dp">

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal">

		<ImageButton
			style="?android:attr/buttonBarButtonStyle"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:src="@drawable/ic_history"
			android:id="@+id/btn_history_search"/>

		<AutoCompleteTextView
			android:id="@+id/search_text"
			android:layout_width="match_parent"
			android:capitalize="none"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:singleLine="true"
			android:hint="@string/label_hint"
			android:completionThreshold="1"
			android:imeOptions="flagNoExtractUi|actionSearch"/>

		<ImageButton
			style="?android:attr/buttonBarButtonStyle"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:src="@drawable/ic_close"
			android:id="@+id/btn_clear_search"/>

		<ImageButton
			style="?android:attr/buttonBarButtonStyle"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:src="@drawable/ic_magnify"
			android:id="@+id/btn_search"
			android:layout_marginLeft="10dp"/>

	</LinearLayout>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal"
		android:gravity="center_horizontal">

		<CheckBox
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/label_ic"
			android:id="@+id/cb_ic"/>

		<CheckBox
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/label_re"
			android:id="@+id/cb_re"
			android:layout_marginLeft="10dp"/>

		<CheckBox
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:id="@+id/cb_mw"
			android:text="@string/label_mw"
			android:layout_marginLeft="10dp"/>

		<CheckBox
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:id="@+id/cb_hidden"
			android:text="@string/label_hidden"
			android:layout_marginLeft="10dp"/>

		<CheckBox
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:id="@+id/cb_files"
			android:text="@string/label_files"
			android:layout_marginLeft="10dp"/>
		
	</LinearLayout>

	<ScrollView
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:layout_weight="1.0">

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="vertical">

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/colorPrimary"
				android:paddingLeft="10dp"
				android:layout_marginTop="10dp">

				<TextView
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_gravity="left|center_vertical"
					android:textSize="20sp"
					android:text="@string/label_dir"/>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/listdir"
				android:paddingLeft="20dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"/>

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/colorPrimary"
				android:paddingLeft="10dp"
				android:layout_marginTop="10dp">

				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_gravity="left|center_vertical"
					android:textSize="20dp"
					android:text="@string/label_ext"/>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/listext"
				android:paddingLeft="20dp"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"/>

		</LinearLayout>

	</ScrollView>

</LinearLayout>

