<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:orientation="vertical">

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="vertical"
			android:padding="10dp">

			<TextView
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:text="aGrep v1.0.0"
				android:gravity="center"
				android:textSize="24sp"
				android:padding="5dp"
				android:textStyle="bold"
				android:shadowColor="#35F408"
				android:typeface="serif"
				android:elevation="10dp"
				android:shadowDx="2.0"
				android:shadowDy="2.0"
				android:shadowRadius="2"
				android:id="@+id/about_title"/>

			<TextView
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:text="@string/about_text"
				android:id="@+id/about_text"/>

		</LinearLayout>

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="vertical"
			android:padding="10dp">

			<TextView
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:text="@string/about_library_title"
				android:gravity="center"
				android:textSize="18sp"
				android:padding="5dp"
				android:textStyle="bold"
				android:shadowColor="#35F408"
				android:typeface="serif"
				android:elevation="10dp"
				android:shadowDx="2.0"
				android:shadowDy="2.0"
				android:shadowRadius="2"/>

			<TextView
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:text="@string/about_library"/>

		</LinearLayout>

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="vertical"
			android:padding="10dp">

			<TextView
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:text="@string/about_license_title"
				android:gravity="center"
				android:textSize="18sp"
				android:padding="5dp"
				android:textStyle="bold"
				android:shadowColor="#35F408"
				android:typeface="serif"
				android:elevation="10dp"
				android:shadowDx="2.0"
				android:shadowDy="2.0"
				android:shadowRadius="2"
				android:id="@+id/about_license_title"/>

			<TextView
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:text="@string/about_google_license"
				android:id="@+id/about_license"/>

		</LinearLayout>

	</LinearLayout>

</ScrollView>

