<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            style="?attr/attr_card_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardUseCompatPadding="true"
            card_view:contentPadding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/about_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:shadowColor="#35F408"
                    android:shadowDx="2.0"
                    android:shadowDy="2.0"
                    android:shadowRadius="2"
                    android:text="aGrep v1.0.0"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorAccent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_text" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?attr/attr_card_style"
            card_view:cardUseCompatPadding="true"
            card_view:contentPadding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:shadowColor="#35F408"
                    android:shadowDx="2.0"
                    android:shadowDy="2.0"
                    android:shadowRadius="2"
                    android:text="@string/about_library_title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorAccent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_library" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?attr/attr_card_style"
            card_view:cardUseCompatPadding="true"
            card_view:contentPadding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:shadowColor="#35F408"
                    android:shadowDx="2.0"
                    android:shadowDy="2.0"
                    android:shadowRadius="2"
                    android:text="@string/about_license_title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorAccent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_google_license" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>

